--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </span>
                     <br> <br>
                     <span>
-                        &emsp;  sy just nk buat awak tahu yang apa jadi pun sy tetap ada dengan awak walaupun apa jadi. hehehehe jap ada bunga lagi tadi bunga fizikal niy <a href="https://sevenjester.github.io/My-flower/">bunga </a> digital pulok hehehehe
+                        &emsp;  sy just nk buat awak tahu yang apa jadi pun sy tetap ada dengan awak walaupun apa jadi. hehehehe jap ada bunga lagi tadi bunga fizikal niy <a href="https://sevenjester.github.io/My-flower/">🌹 </a> digital pulok hehehehe
                     </span>      
                 </p>
                 <br>
