--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="messageState" type="checkbox" style="display:none"/>
             </label>
             <div class="message">
-                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear My Huda❤❤,</h1>
+                <h1 style="font-family: Cinzel, serif; font-size: 40px; letter-spacing: 1.2px;">Dear My Huda❤❤</h1>
                 <p> 
                     <span>
                         &emsp; Hai Awaknya, surprise kedua untuk secret letter hehehehe, tq awaknya sbb terima saya walaupun saya gini, sy tahu sy banyak kekurangan, tpi in Sha Allah sy usaha sedaya-upaya umtuk halalkan awak 
